--- a/hugo.yaml
+++ b/hugo.yaml
@@ -22,11 +22,11 @@ languages:
                 subtitle: Example description
     zh-cn:
         languageName: 中文
-        title: 演示站点
+        title: 19y
         weight: 2
         params:
             sidebar:
-                subtitle: 演示说明
+                subtitle: 技术分享
     ar:
         languageName: عربي
         languagedirection: rtl
